--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,3 +1,5 @@
+<!-- 'Group 21 - COMP90024 Cluster and Cloud Computing' -->
+<!--This is the template for index page-->
 <script src="/lib/home_map.js"></script>
 <div id="loading">
 <div id="fountainTextG">
