--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,5 @@
+<!-- 'Group 21 - COMP90024 Cluster and Cloud Computing' -->
+<!--This is the template for index page-->
 <script>
     $( document ).ready(function() {
         $("#keyword").focus();
