--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,7 +1,9 @@
+<!-- 'Group 21 - COMP90024 Cluster and Cloud Computing' -->
+<!--This is the main template of the website-->
 <!doctype html>
 <html>
 <head>
-    <title>Simple Dudes Twitter Analysis</title>
+    <title>Simple Dudes Keyword Sentiment Analysis</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1" />
     <script src="//code.jquery.com/jquery-2.0.2.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js"></script>
