--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,5 @@
+/*'Group 21 - COMP90024 Cluster and Cloud Computing'*/
+
 body, html {
     font-family: 'Open Sans', sans-serif;
     height: 100%;
